# instagram-archiver

./: .cruft.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .pylintrc  .readthedocs.yaml  .style.yapf  .wiswa.jsonnet  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README.md  package.json  pyproject.toml  setup.py  sh.tat.instagram-archiver.yml  snapcraft.yaml
.claude/agents/: click-auditor.md  coverage-improver.md  docstring-fixer.md  mypy-fixer.md  python-expert.md  regen.md  release.md  test-writer.md  wiswa-sync.md
.claude/skills/ci/: SKILL.md
.claude/skills/make-release/: SKILL.md
.github/: dependabot.yml
.github/instructions/: general.instructions.md
.github/workflows/: appimage.yml  codeql.yml  flatpak.yml  publish.yml  pyinstaller.yml  python-package.yml  qa.yml  release.yml  snap.yml  tests.yml
.stubs/: pluggy.pyi  ratelimit.pyi  ratelimiter.pyi
.stubs/ratelimit/: __init__.pyi  decorators.py
.stubs/yt_dlp/: __init__.pyi  cookies.pyi  utils.pyi
.stubs/yt_dlp/extractor/: common.pyi  instagram.pyi
docs/: badges.rst  conf.py  index.rst
instagram_archiver/: __init__.py  __main__.py  client.py  compat.py  constants.py  dedup.py  extractor.py  fetch_video.py  find_query_hashes.py  ig_typing.py  main.py  profile_scraper.py  saved_scraper.py  typing.py  utils.py  workers.py
man/: instagram-archiver.1
tests/: conftest.py  test_client.py  test_compat.py  test_main.py  test_scrapers.py  test_utils.py  test_workers.py
