[tool.poetry]
name = "instagram-archiver"
version = "0.2.0"
description = "Archive Instagram content."
authors = ["Andrew Udvare <audvare@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "instagram_archiver" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
click = "^8.1.3"
loguru = "^0.6.0"
ratelimit = "^2.2.1"
requests = "^2.28.2"
yt-dlp = "^2023.6.22"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pylint = "^2.17.2"
pylint-quotes = "^0.2.3"
rope = "^1.7.0"
toml = "^0.10.2"
types-requests = "^2.28.11.17"

[tool.poetry.group.docs.dependencies]
sphinx = ">=6.1.3,<8.0.0"

[tool.poetry.group.packaging.dependencies]
twine = "^4.0.2"
wheel = "^0.40.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-mock = "^3.10.0"
mock = "^5.0.1"
requests-mock = "^1.10.0"
coveralls = "^3.3.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
ia = "instagram_archiver.main:main"
