[tool.poetry]
name = "instagram-archiver"
version = "0.2.0"
description = "Archive Instagram content."
authors = ["Andrew Udvare <audvare@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "instagram_archiver" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
click = ">=8.0,<8.1.4"
loguru = "^0.6.0"
ratelimit = "^2.2.1"
requests = "^2.28.2"
yt-dlp = "^2023.6.22"
yt-dlp-types = "^0.0.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pluggy-types = "^0.0.1"
pylint = "^2.17.2"
pylint-quotes = "^0.2.3"
ratelimit-types = "^0.0.1"
rope = "^1.7.0"
toml = "^0.10.2"
types-requests = "^2.28.11.17"
yapf = "^0.40.1"

[tool.poetry.group.docs.dependencies]
docutils = "^0.20.1"
esbonio = "^0.16.1"
sphinx = "^7.0.1"

[tool.poetry.group.packaging.dependencies]
twine = "^4.0.2"
wheel = "^0.40.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-mock = "^3.10.0"
mock = "^5.0.1"
requests-mock = "^1.10.0"
coveralls = "^3.3.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
ia = "instagram_archiver.main:main"

[tool.isort]
case_sensitive = true
combine_as_imports = true
from_first = true
line_length = 100
order_by_type = true
use_parentheses = true

[tool.pylint.main]
ignore = [".git", "node_modules"]
ignore-patterns = [".*\\.pyi"]
load-plugins = ["pylint_quotes"]

[tool.pylint.basic]
class-attribute-naming-style = "snake_case"
good-names = ["e", "f", "g", "i", "id", "j", "k", "m", "n", "r", "x", "y", "z"]
include-naming-hint = true
inlinevar-naming-style = "snake_case"

[tool.pylint.design]
max-args = 8
max-branches = 15
max-locals = 30
max-statements = 80

[tool.pylint.format]
expected-line-ending-format = "LF"

[tool.pylint.logging]
logging-format-style = "new"
logging-modules = ["logging", "loguru"]

[tool.pylint."messages control"]
disable = [
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "too-many-instance-attributes",
  "unspecified-encoding",
  "use-dict-literal"
]

[tool.pylint.refactoring]
max-nested-blocks = 6

[tool.pylint.variables]
# allow-global-unused-variables = true
